
- Added support for MySQL.  (Version 5.0 is probably the minimum.)

- Added the poll_interval option.  It reduces the frequency of database
  polls, but it also increases the potential for conflict errors on
  servers with high write volume.

- Implemented the storage iterator protocol, making it possible to copy
  transactions to and from FileStorage and other RelStorage instances.


PGStorage 0.4

- Began using the PostgreSQL LISTEN and NOTIFY statements as a shortcut
  for invalidation polling.

- Removed the commit_order code.  The commit_order idea was intended to
  allow concurrent commits, but that idea is a little too ambitious while
  other more important ideas are being tested.  Something like it may
  come later.

- Improved connection management: only one database connection is
  held continuously open per storage instance.

- Reconnect to the database automatically.

- Removed test mode.

- Switched from using a ZODB.Connection subclass to a ZODB patch.  The
  Connection class changes in subtle ways too often to subclass reliably;
  a patch is much safer.

- PostgreSQL 8.1 is now a dependency because PGStorage uses two phase commit.

- Fixed an undo bug.  Symptom: attempting to examine the undo log revealed
  broken pickles.  Cause: the extension field was not being wrapped in
  psycopg2.Binary upon insert.  Solution: used psycopg2.Binary.
  Unfortunately, this doesn't fix existing transactions people have
  committed.  If anyone has any data to keep, fixing the old transactions
  should be easy.

- Moved from a private CVS repository to Sourceforge.
  See http://pgstorage.sourceforge.net .  Also switched to the MIT license.

- David Pratt added a basic getSize() implementation so that the Zope
  management interface displays an estimate of the size of the database.

- Turned PGStorage into a top-level package.  Python generally makes
  top-level packages easier to install.


PGStorage 0.3
