@@ -226,11 +226,8 @@ class OracleAdapter(Adapter):
             self.close(conn, cursor)
 
 
-    def zap(self):
-        """Clear all data out of the database.
-
-        Used by the test suite.
-        """
+    def zap_all(self):
+        """Clear all data out of the database."""
         conn, cursor = self.open()
         try:
             try:
@@ -579,6 +576,28 @@ class OracleAdapter(Adapter):
         )
         """
         cursor.execute(stmt, (tid,))
+
+    def set_min_oid(self, cursor, oid):
+        """Ensure the next OID is at least the given OID."""
+        next_oid = self.new_oid(cursor)
+        if next_oid < oid:
+            # Oracle provides no way modify the sequence value
+            # except through alter sequence or drop/create sequence,
+            # but either statement kills the current transaction.
+            # Therefore, open a temporary connection to make the
+            # alteration.
+            conn2, cursor2 = self.open()
+            try:
+                # Change the sequence by altering the increment.
+                # (this is safer than dropping and re-creating the sequence)
+                diff = oid - next_oid
+                cursor2.execute(
+                    "ALTER SEQUENCE zoid_seq INCREMENT BY %d" % diff)
+                cursor2.execute("SELECT zoid_seq.nextval FROM DUAL")
+                cursor2.execute("ALTER SEQUENCE zoid_seq INCREMENT BY 1")
+                conn2.commit()
+            finally:
+                self.close(conn2, cursor2)
 
     def commit_phase1(self, cursor, tid):
         """Begin a commit.  Returns the transaction name.
